Closed Bug 68063 Opened 24 years ago Closed 24 years ago

NSS_Init isn't backwards compatible on Mac

Categories

(NSS :: Libraries, defect, P1)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: javi, Assigned: nelson)

Details

Attachments

(2 files)

While debugging PSM 2 today, I realized NSS 3.2 doesn't create files correctly on 
the Mac.  It uses the same names as on UNIX which is unlike the way it had been 
done in the past.

In the past, on the Mac the db names were: "Security Modules", "Certificates7", 
and "Key Database3"

A patch that keeps this naming convention on the Macintosh will be coming 
shortlhy.
Here's a suggestion:
Given that PATH_SEPARATOR is a #defined constant string,

name = PR_smprintf("%s%s%s",configdir,PATH_SEPARATOR,prefix);

is equivalent to 

name = PR_smprintf("%s" PATH_SEPARATOR "%s",configdir,prefix);

and the latter produces less code and less run time work.
Assigned the bug to Nelson.

Javi, could you post a new patch with Nelson's suggested
change?  After Nelson ok's the new patch, you can check it
in.  Thanks.
Assignee: wtc → nelsonb
Priority: -- → P1
Target Milestone: --- → 3.2
Attached patch Updated patch.Splinter Review
Javi, I have verified that the patch you sent me builds 
on NT, HPUX and Solaris, and that it runs on HPUX.
It passes my review.
Fix checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: