Fix for Bug 68063  r=nelsonb, a=wtcMake NSS_Init backwards compatible for the Mac.